# pydantic-examples

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: main.yml  publish.yml
src/pydantic_examples/: __init__.py  yaml.py
tests/: test_example1.py  test_example2.py  test_generation.py
