[project]
name = "pydantic-examples"
description = "Generate examples of serialized data from Pydantic models"
authors = [
    { name = "Bram Neijt", email = "bram@neijt.nl" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ruamel-yaml>=0.18.6",
    "pydantic>=2.9.2",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.version]
path = "src/pydantic_examples/__init__.py"