[project]
name = "pydantic-examples"
description = "Generate examples of serialized data from Pydantic models"
authors = [{ name = "Bram Neijt", email = "bram@neijt.nl" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = ["ruamel-yaml>=0.18.6", "pydantic>=2.9.2"]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
repository = "https://github.com/bneijt/pydantic-examples"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.3.3"]

[tool.hatch.version]
path = "src/pydantic_examples/__init__.py"

[tool.ruff.lint]
extend-select = ["I"]
